test/TestPhases/typechecker/invalid/incrementFAIL.blc
module


activity empty ()()
    var x: int64 = 15

    x = x + 1.0
    await false;
end
